--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,7 @@ body {
     flex-flow: column;
     height: 100vh;
     margin: 0;
+    font-family: Oswald, sans-serif;
     
 }
 
@@ -18,7 +19,7 @@ body {
     display: flex;
     width: 100%;
     height: 100%;
-    background-color: rgba(0, 0 , 0, 0.7);
+    background-color: rgba(255, 255 , 255, 0.7);
     flex-flow: column;
     justify-content: center;
     text-align: center;
@@ -44,12 +45,12 @@ header{
 
 #player1 {
     outline: 3px solid red;
-    padding: 3px;
+    padding: 4px 8px;
 }
 
 #player2 {
     outline: 3px solid blue;
-    padding: 3px;
+    padding: 4px 8px;
 }
 
 .grid {
@@ -59,7 +60,6 @@ header{
     grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
     background-color: yellow;
     /* height: 100%; */
-    margin: 40px;
     padding: 0 10px;
 }
 
@@ -81,4 +81,30 @@ header{
     align-self: center;
     justify-self: center;
     margin: .3em;
+}
+
+h1 {
+    font-size: 100px;
+    margin: 0;
+}
+
+h2 {
+    margin: 0;
+    font-size: 50px;
+}
+
+p {
+    font-family: Helvetica, sans-serif;
+    font-size: 18px;
+    text-align: center;
+
+}
+
+#restart {
+    margin: 50px;
+}
+
+button {
+ font-family:Helvetica, sans-serif;
+ font-size: 14px;
 }
