--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,4 @@
 * {
-    /* height & width now includes border & padding */
     box-sizing: border-box;
 }
 
@@ -10,8 +9,7 @@ body {
     flex-flow: column;
     height: 100vh;
     margin: 0;
-    font-family: Oswald, sans-serif;
-    
+    font-family: Oswald, sans-serif; 
 }
 
 #overlay{
@@ -40,7 +38,6 @@ header{
 
 .player {
     margin: 0 40px;
-
 }
 
 #player1 {
@@ -59,7 +56,6 @@ header{
     grid-column-gap: 16px;
     grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
     background-color: yellow;
-    /* height: 100%; */
     padding: 0 10px;
 }
 
@@ -69,14 +65,13 @@ header{
     grid-column-gap: 16px;
     grid-row-gap: 5px;
     grid-template-rows: auto auto auto auto auto auto;
-    /* border: 3px black solid; */
     width: 4em;
     justify-items: center;
 }
 .circle {
     height: 3em;
     width: 3em;
-    background-color: #DCDCDC;
+    background-color: rgb(220,220,220);
     border-radius: 50%;
     align-self: center;
     justify-self: center;
@@ -97,7 +92,6 @@ p {
     font-family: Helvetica, sans-serif;
     font-size: 18px;
     text-align: center;
-
 }
 
 #restart {
@@ -108,3 +102,11 @@ button {
  font-family:Helvetica, sans-serif;
  font-size: 14px;
 }
+
+#winner {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-flow: column;
+}
+
