--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,7 @@ body {
     font-family: Oswald, sans-serif; 
 }
 
-#overlay{
+#overlay {
     position: fixed;
     display: flex;
     width: 100%;
@@ -23,7 +23,7 @@ body {
     text-align: center;
 }
 
-header{
+header {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -68,6 +68,7 @@ header{
     width: 4em;
     justify-items: center;
 }
+
 .circle {
     height: 3em;
     width: 3em;
@@ -95,8 +96,9 @@ p {
 }
 
 button {
- font-family:Helvetica, sans-serif;
- font-size: 14px;
+    margin: 20px 0;
+    font-family:Helvetica, sans-serif;
+    font-size: 18px;
 }
 
 #winner {
